Fix blue buttons on iOS?

--- a/frontend/src/shared/components/Button/button.less
+++ b/frontend/src/shared/components/Button/button.less
@@ -15,6 +15,7 @@
   border-style: solid;
 
   &.secondary {
+    color: @font-color-dark;
     border-color: @font-color-dark;
     background-color: transparent;
   }
